--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,43 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <include
+                android:id="@+id/request_rectangle"
+                layout="@layout/request_rectangle">
+
+            </include>
+
+            <include
+                android:id="@+id/request_rectangle"
+                layout="@layout/request_rectangle">
+
+            </include>
+
+            <include
+                android:id="@+id/request_rectangle"
+                layout="@layout/request_rectangle">
+
+            </include>
+
+            <include
+                android:id="@+id/request_rectangle"
+                layout="@layout/request_rectangle">
+
+            </include>
+
+            <include
+                android:id="@+id/request_rectangle"
+                layout="@layout/request_rectangle">
+
+            </include>
+
+            <include
+                android:id="@+id/request_rectangle"
+                layout="@layout/request_rectangle">
+
+            </include>
+
+
         </LinearLayout>
 
     </ScrollView>
