--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -24,21 +26,21 @@
 
     </android.support.v7.widget.Toolbar>
 
+
     <android.support.design.widget.TabLayout
+        android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tablayout"
-        app:tabGravity="fill"
-        app:tabMode="fixed"
-        app:tabTextColor="@color/colorAccent"
-        app:tabIndicatorColor="@color/photoBgColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_bar"
-        app:layout_constraintVertical_bias="0.0"/>
-
+        app:layout_constraintVertical_bias="0.0"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@color/photoBgColor"
+        app:tabMode="fixed"
+        app:tabTextColor="@color/colorAccent" />
 
     <include
         android:id="@+id/profile_button"
@@ -109,78 +111,14 @@
         app:layout_constraintTop_toTopOf="@+id/app_bar" />
 
     <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/viewPager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tablayout"
-        app:layout_constraintVertical_bias="0.0">
-
-        <ScrollView
-            android:id="@+id/scrollView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tablayout"
-            app:layout_constraintVertical_bias="0.0">
-
-            <LinearLayout
-                android:id="@+id/mainTape"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <include
-                    android:id="@+id/request_rectangle"
-                    layout="@layout/request_rectangle">
-
-                </include>
-
-                <include
-                    android:id="@+id/request_rectangle"
-                    layout="@layout/request_rectangle">
-
-                </include>
-
-                <include
-                    android:id="@+id/request_rectangle"
-                    layout="@layout/request_rectangle">
-
-                </include>
-
-                <include
-                    android:id="@+id/request_rectangle"
-                    layout="@layout/request_rectangle">
-
-                </include>
-
-                <include
-                    android:id="@+id/request_rectangle"
-                    layout="@layout/request_rectangle">
-
-                </include>
-
-                <include
-                    android:id="@+id/request_rectangle"
-                    layout="@layout/request_rectangle">
-
-                </include>
-
-                <include
-                    android:id="@+id/request_rectangle"
-                    layout="@layout/request_rectangle">
-
-                </include>
-
-            </LinearLayout>
-
-        </ScrollView>
-    </android.support.v4.view.ViewPager>
+        app:layout_constraintVertical_bias="0.0" />
 
     <include
         android:id="@+id/request_button"
