--- a/app/src/main/res/layout/found_fragment.xml
+++ b/app/src/main/res/layout/found_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    android:id="@+id/scrollView"
+    android:id="@+id/foundscrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_constraintBottom_toBottomOf="parent"
@@ -15,7 +15,7 @@
     app:layout_constraintVertical_bias="0.0">
 
     <LinearLayout
-        android:id="@+id/mainTape"
+        android:id="@+id/foundmainTape"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
