--- a/app/src/main/res/values-v17/styles.xml
+++ b/app/src/main/res/values-v17/styles.xml
@@ -3,5 +3,6 @@
 
     <style name="CustomTextAlignment" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:textAlignment">center</item>
+        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
     </style>
 </resources>
