--- a/app/src/main/res/drawable/rounded_sign_in_button.xml
+++ b/app/src/main/res/drawable/rounded_sign_in_button.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/bgSignInbutton" />
+    <solid android:color="@color/iconColor"></solid>
     <corners
-        android:bottomRightRadius="75dp"
-        android:bottomLeftRadius="75dp"
-        android:topRightRadius="75dp"
-        android:topLeftRadius="75dp"/>
+        android:bottomRightRadius="50dp"
+        android:bottomLeftRadius="50dp"
+        android:topRightRadius="50dp"
+        android:topLeftRadius="50dp"/>
 </shape>
