--- a/app/src/main/res/layout/app_name.xml
+++ b/app/src/main/res/layout/app_name.xml
@@ -9,10 +9,12 @@
         android:id="@+id/action_bar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimary"
         android:text="@string/app_name"
-        android:textAlignment="center"
-        android:textSize="30sp">
+        android:textSize="30sp"
+        android:textAlignment="viewStart"
+        android:gravity="start">
 
     </TextView>
 
