--- a/app/src/main/res/layout/image_button.xml
+++ b/app/src/main/res/layout/image_button.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageButton
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/profileButton"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="60dp"
+    android:layout_height="50dp"
+    android:layout_gravity="left"
     android:background="@color/colorPrimary"
-    android:layout_gravity="center_vertical"
-    android:src="@drawable/icons8_user_40"
-    android:contentDescription="@string/image_button">
+    android:contentDescription="@string/image_button"
+    android:src="@drawable/profile_image">
+
 </ImageButton>
