--- a/app/src/main/res/layout/log_in_activity.xml
+++ b/app/src/main/res/layout/log_in_activity.xml
@@ -2,163 +2,78 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/SignInBackground">
+    android:background="@color/upBgColor">
+
+    <View
+        android:id="@+id/main_group"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/rounded_email"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.19" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="148dp"
+        android:layout_height="146dp"
+        app:layout_constraintBottom_toBottomOf="@+id/main_group"
+        app:layout_constraintEnd_toEndOf="@+id/main_group"
+        app:layout_constraintStart_toStartOf="@+id/main_group"
+        app:layout_constraintTop_toTopOf="@+id/main_group"
+        app:srcCompat="@drawable/polylogo" />
 
     <Button
         android:id="@+id/sign_in_button"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:background="@drawable/rounded_sign_in_button"
-        android:textColor="@color/colorPrimary"
-        android:text="@string/sign_in"
+        android:hint="@string/sign_in"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+
+    <View
+        android:id="@+id/view6"
+        android:layout_width="580dp"
+        android:layout_height="729dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/rounded_register_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_ellipse"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/sign_in_button" />
 
-    <EditText
-        android:id="@+id/email_ellipse"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:background="@drawable/rounded_email"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:enabled="false"
-        android:singleLine="true"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.400" />
-
-    <EditText
-        android:id="@+id/password_ellipse"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="24dp"
+    <Button
+        android:id="@+id/registered_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="50dp"
         android:background="@drawable/rounded_password"
-        android:ems="10"
-        android:enabled="false"
+        android:gravity="center_horizontal|center_vertical"
+        android:hint="@string/register"
+        android:textAlignment="gravity"
+        android:textColor="@color/borderColor"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_ellipse"
+        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
         app:layout_constraintVertical_bias="0.0" />
-
-    <ImageView
-        android:id="@+id/emailImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:background="@drawable/rounded_email"
-        app:layout_constraintBottom_toBottomOf="@+id/email_ellipse"
-        app:layout_constraintEnd_toEndOf="@+id/email_ellipse"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/email_ellipse"
-        app:layout_constraintTop_toTopOf="@+id/email_ellipse"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
-
-    <ImageView
-        android:id="@+id/lockImage"
-        android:layout_width="33dp"
-        android:layout_height="29dp"
-        app:layout_constraintBottom_toBottomOf="@+id/password_ellipse"
-        app:layout_constraintEnd_toEndOf="@+id/password_ellipse"
-        app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toStartOf="@+id/password_ellipse"
-        app:layout_constraintTop_toTopOf="@+id/password_ellipse"
-        app:layout_constraintVertical_bias="0.571"
-        app:srcCompat="@android:drawable/ic_lock_idle_lock" />
-
-    <TextView
-        android:id="@+id/app_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/app_name"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toTopOf="@+id/email_ellipse"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.724" />
-
-    <TextView
-        android:id="@+id/not_reqistered"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:text="@string/not_registered"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
-        app:layout_constraintStart_toStartOf="@+id/sign_in_button"
-        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
-        app:layout_constraintVertical_bias="0.069" />
-
-    <TextView
-        android:id="@+id/createAnAccount"
-        android:layout_width="124dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:background="@null"
-        android:ems="10"
-        android:hint="@string/create_an_account"
-        android:textColorHint="@color/colorPrimaryDark"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/not_reqistered"
-        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
-        app:layout_constraintVertical_bias="0.057" />
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:background="@null"
-        android:ems="10"
-        android:hint="@string/email"
-        android:inputType="textPersonName"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/email_ellipse"
-        app:layout_constraintEnd_toEndOf="@+id/email_ellipse"
-        app:layout_constraintHorizontal_bias="0.088"
-        app:layout_constraintStart_toEndOf="@+id/emailImage"
-        app:layout_constraintTop_toTopOf="@+id/email_ellipse" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@null"
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/password_ellipse"
-        app:layout_constraintEnd_toEndOf="@+id/password_ellipse"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/lockImage"
-        app:layout_constraintTop_toTopOf="@+id/password_ellipse" />
 
 </android.support.constraint.ConstraintLayout>
