--- a/app/src/main/res/layout/lost_fragment.xml
+++ b/app/src/main/res/layout/lost_fragment.xml
@@ -7,6 +7,7 @@
     android:id="@+id/lostscrollView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:scrollY="110dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
@@ -19,47 +20,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <include
-            android:id="@+id/request_rectangle"
-            layout="@layout/request_rectangle">
-
-        </include>
-
-        <include
-            android:id="@+id/request_rectangle"
-            layout="@layout/request_rectangle">
-
-        </include>
-
-        <include
-            android:id="@+id/request_rectangle"
-            layout="@layout/request_rectangle">
-
-        </include>
-
-        <include
-            android:id="@+id/request_rectangle"
-            layout="@layout/request_rectangle">
-
-        </include>
-
-        <include
-            android:id="@+id/request_rectangle"
-            layout="@layout/request_rectangle">
-
-        </include>
-
-        <include
-            android:id="@+id/request_rectangle"
-            layout="@layout/request_rectangle">
-
-        </include>
-
-        <include
-            android:id="@+id/request_rectangle"
-            layout="@layout/request_rectangle">
-
-        </include>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:id="@+id/tmpView"/>
 
     </LinearLayout>
 
