CreateAccountActivity 1) Change phone on re_enter_password name FoundFragment 1) Add photo image receiver with scaling to image View with 100 height and width MainActivity 1) Change addNewElement to scroll views in fragments to getActivityForResult NewRequestActivity 1) Add photo

--- a/app/src/main/res/drawable/rounded_register_view3.xml
+++ b/app/src/main/res/drawable/rounded_register_view3.xml
@@ -4,8 +4,6 @@
     <solid android:color="#6870f7" />
     <corners
         android:topLeftRadius="25dp"
-        android:topRightRadius="25dp"
-        android:bottomLeftRadius="25dp"
-        android:bottomRightRadius="25dp">
+        android:topRightRadius="25dp">
     </corners>
 </shape>
