--- a/app/src/main/res/layout/found_fragment.xml
+++ b/app/src/main/res/layout/found_fragment.xml
@@ -18,15 +18,15 @@
     <LinearLayout
         android:id="@+id/foundmainTape"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="true"
         android:orientation="vertical">
 
         <View
+            android:id="@+id/tmpView"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:id="@+id/tmpView"/>
+            android:layout_height="110dp" />
 
     </LinearLayout>
 
