--- a/app/src/main/res/layout/create_account_activity.xml
+++ b/app/src/main/res/layout/create_account_activity.xml
@@ -7,15 +7,52 @@
     android:layout_height="match_parent"
     tools:context=".ProfileActivity">
 
+    <View
+        android:id="@+id/view4"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:background="@drawable/rounded_register_view3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="23dp"
+        android:text="Already have an account?"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintBottom_toBottomOf="@+id/view4"
+        app:layout_constraintEnd_toEndOf="@+id/view4"
+        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintStart_toStartOf="@+id/view4"
+        app:layout_constraintTop_toTopOf="@+id/view4" />
+
+    <TextView
+        android:id="@+id/sign_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Sign In"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/view4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/view4" />
+
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/view4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_bar"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
         <android.support.constraint.ConstraintLayout
@@ -41,31 +78,34 @@
             <EditText
                 android:id="@+id/email_field"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="50dp"
                 android:backgroundTint="@color/borderColor"
                 android:ems="10"
-                android:hint="somebody@gmail.com"
                 android:paddingStart="5dp"
-                android:paddingEnd="5dp"
+                android:hint="@string/somebody_gmail_com"
+                android:inputType="textEmailAddress"
+                android:lines="1"
                 android:selectAllOnFocus="false"
                 android:singleLine="false"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/email" />
 
             <EditText
                 android:id="@+id/name_surname_field"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="50dp"
                 android:backgroundTint="@color/borderColor"
                 android:ems="10"
                 android:hint="John Smith"
                 android:inputType="textPersonName"
+                android:lines="1"
                 android:paddingEnd="5dp"
                 android:selectAllOnFocus="false"
                 android:singleLine="false"
@@ -78,7 +118,7 @@
             <TextView
                 android:id="@+id/email"
                 android:layout_width="wrap_content"
-                android:layout_height="42dp"
+                android:layout_height="32dp"
                 android:layout_marginStart="50dp"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
@@ -92,7 +132,7 @@
             <TextView
                 android:id="@+id/password_text"
                 android:layout_width="wrap_content"
-                android:layout_height="42dp"
+                android:layout_height="32dp"
                 android:layout_marginStart="50dp"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
@@ -109,7 +149,6 @@
                 android:layout_height="32dp"
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="40dp"
-                android:layout_marginBottom="56dp"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
                 android:text="Name Surname"
@@ -119,18 +158,19 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.25" />
+                app:layout_constraintVertical_bias="0.35000002" />
 
             <EditText
                 android:id="@+id/password_field"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="50dp"
                 android:backgroundTint="@color/borderColor"
                 android:ems="10"
                 android:hint="Type Password"
                 android:inputType="textPassword"
+                android:lines="1"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
                 android:textSize="24sp"
@@ -139,26 +179,28 @@
                 app:layout_constraintTop_toBottomOf="@+id/password_text" />
 
             <EditText
-                android:id="@+id/telephone_field"
+                android:id="@+id/reenter_password_field"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="50dp"
                 android:backgroundTint="@color/borderColor"
                 android:ems="10"
                 android:hint="Re-Enter Password"
-                android:inputType="phone"
+                android:inputType="textPassword"
+                android:lines="1"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/telephone_text" />
 
             <TextView
                 android:id="@+id/telephone_text"
                 android:layout_width="wrap_content"
-                android:layout_height="42dp"
+                android:layout_height="32dp"
                 android:layout_marginStart="50dp"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
@@ -181,48 +223,7 @@
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/telephone_field" />
-
-            <View
-                android:id="@+id/view4"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
-                android:background="@drawable/rounded_register_view3"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/create"
-                app:layout_constraintVertical_bias="1.0" />
-
-            <TextView
-                android:id="@+id/sign_in"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="Sign In"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/view4"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/textView3"
-                app:layout_constraintTop_toTopOf="@+id/view4" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="23dp"
-                android:text="Already have an account?"
-                android:textColor="@color/colorAccent"
-                app:layout_constraintBottom_toBottomOf="@+id/view4"
-                app:layout_constraintEnd_toEndOf="@+id/view4"
-                app:layout_constraintHorizontal_bias="0.3"
-                app:layout_constraintStart_toStartOf="@+id/view4"
-                app:layout_constraintTop_toTopOf="@+id/view4" />
+                app:layout_constraintTop_toBottomOf="@+id/reenter_password_field" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
