--- a/app/src/main/res/layout/new_request_button.xml
+++ b/app/src/main/res/layout/new_request_button.xml
@@ -5,5 +5,6 @@
     android:layout_height="70dp"
     android:layout_gravity="end|bottom"
     android:background="@drawable/create_request_button"
-    android:src="@android:drawable/ic_menu_add">
+    android:src="@android:drawable/ic_input_add">
+
 </ImageButton>
