--- a/app/src/main/res/layout/request_rectangle.xml
+++ b/app/src/main/res/layout/request_rectangle.xml
@@ -46,6 +46,7 @@
         android:layout_marginStart="8dp"
         android:ems="10"
         android:hint="@string/description"
+        android:textColor="@color/descriptionColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -65,6 +66,7 @@
         android:lines="1"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
