--- a/app/src/main/res/layout/new_request_activity.xml
+++ b/app/src/main/res/layout/new_request_activity.xml
@@ -7,50 +7,24 @@
     android:layout_height="match_parent"
     android:focusableInTouchMode="true">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/CustomActionBarStyle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar">
 
-        <ImageButton
-            android:id="@+id/backButton"
-            android:layout_width="25dp"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:contentDescription="@string/backToMain"
-            app:srcCompat="?attr/homeAsUpIndicator"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="18dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Create New Request"
-            android:textSize="30sp"
-            android:textColor="@color/white"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"/>
-
-    </android.support.v7.widget.Toolbar>
+    </include>
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:fillViewport="true"
-        android:scrollbarStyle="outsideInset"
         android:scrollbarSize="1dp"
+        android:scrollbarStyle="outsideInset"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_bar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
@@ -58,57 +32,31 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <View
-                android:id="@+id/divider5"
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:background="@color/choiceColor"
-                app:layout_constraintVertical_bias="0.5"
-                tools:layout_editor_absoluteX="0dp" />
-
             <Button
                 android:id="@+id/lost_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:layout_marginTop="20dp"
                 android:text="lost or found"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/app_bar" />
 
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/choiceColor"
-                app:layout_constraintVertical_bias="0.5"
-                tools:layout_editor_absoluteX="0dp" />
-
             <ImageButton
-                android:id="@+id/photoImageButton"
+                android:id="@+id/photoImage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:background="@color/colorAccent"
                 android:contentDescription="@string/setimagefromphone"
-                android:src="@drawable/icons8_user_40"
+                android:layout_marginTop="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lost_button"
                 app:layout_constraintVertical_bias="0.0" />
-
-            <View
-                android:id="@+id/divider3"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/choiceColor"
-                app:layout_constraintBottom_toBottomOf="@+id/lost_button"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lost_button" />
 
             <EditText
                 android:id="@+id/title"
@@ -120,21 +68,13 @@
                 android:inputType="textMultiLine"
                 android:padding="10dp"
                 android:textSize="24sp"
+                android:layout_marginTop="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/photoImageButton"
+                app:layout_constraintTop_toBottomOf="@+id/photoImage"
                 app:layout_constraintVertical_bias="0.0" />
-
-            <View
-                android:id="@+id/divider2"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/choiceColor"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/title" />
 
             <EditText
                 android:id="@+id/description"
@@ -147,6 +87,7 @@
                 android:inputType="textMultiLine"
                 android:padding="10dp"
                 android:scrollbars="vertical"
+                android:layout_marginTop="20dp"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -155,33 +96,15 @@
                 app:layout_constraintTop_toBottomOf="@+id/title"
                 app:layout_constraintVertical_bias="0.0" />
 
-            <View
-                android:id="@+id/divider4"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/choiceColor"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/title" />
-
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorAccent"
+                android:layout_marginTop="20dp"
                 android:dropDownWidth="wrap_content"
                 android:spinnerMode="dropdown" />
 
-            <Button
-                android:id="@+id/publish_button"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/profile_image_button"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="80dp"
-                android:text="@string/publish_button">
-
-            </Button>
         </LinearLayout>
     </ScrollView>
 
