--- a/app/src/main/res/layout/open_request.xml
+++ b/app/src/main/res/layout/open_request.xml
@@ -144,7 +144,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/photoImageButton"
+                app:layout_constraintTop_toBottomOf="@+id/photoImage"
                 app:layout_constraintVertical_bias="0.0" />
 
             <View
